realized the power of the clear attribute which fixed my text image wrap problem.

--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,14 @@ body {
   text: 10px;
 }
 
-.CaptainIsDeadFigure {
+.CaptainIsDead{
   float: left;
+  clear: left; 
 }
 
-.CodecademyFigure {
+.Codecademy {
   float: left;
-}
-
-.CodeTogather {
-  display: block;
-  margin: auto;
+  clear: left; 
 }
 
 .form-input {
